[package]
name = "canvas-game"
version = "0.1.0"
authors = ["danielrh"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
wasm-bindgen-test = "0.3.17"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
